<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/onetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/blue_bg"
        android:padding="20dp"
        android:text="@string/one_name" />

    <TextView
        android:id="@+id/twotextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/onetextview"
        android:background="@color/gray_bg"
        android:padding="20dp"
        android:text="@string/two_name" />

    <TextView
        android:id="@+id/threetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/twotextview"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/onetextview"
        android:background="@color/red_bg"
        android:padding="20dp"
        android:text="@string/three_name" />

    <TextView
        android:id="@+id/fourtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"
        android:padding="20dp"
        android:text="@string/four_name" />

    <TextView
        android:id="@+id/fivetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/holo_orange_dark"
        android:padding="20dp"
        android:text="@string/five_name" />

    <ToggleButton
        android:id="@+id/togglebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fivetextview"
        android:layout_centerHorizontal="true"
        android:onClick="onToggleClicked"
        android:textOff="关闭"
        android:textOn="打开" />

    <Switch
        android:id="@+id/switchbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/togglebutton"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textOff="关闭"
        android:textOn="打开" />

</RelativeLayout>